plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'tools.project'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

bootJar {
	archiveBaseName.set('StGuideBook')
}


repositories {
	mavenCentral()
}

dependencies {

	// Spring Starter
	implementation 'org.springframework.boot:spring-boot-starter'

	// Spring Web
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Spring Data JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// MySQL Driver
	implementation 'mysql:mysql-connector-java:8.0.32'

	// Test dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'

	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// log
	implementation 'org.springframework.boot:spring-boot-starter-logging'  // Logback 포함

	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'


}

tasks.named('test') {
	useJUnitPlatform()
}
